# high-aviation-backend

./: BUILD.bazel  Gemfile  d.sh
app/controllers/: application_controller.rb  flight_controller.rb  orders_controller.rb  sessions_controller.rb
app/mailers/: application_mailer.rb
app/models/: airport.rb  flight.rb  fund.rb  order.rb  passenger.rb  urik.rb  user.rb
app/views/devise/: _footer.html.slim  _footer.text.slim
app/views/devise/mailer/: confirmation_instructions.html.slim  reset_password_instructions.html.slim  unlock_instructions.html.slim
app/views/devise/sessions/: create.json.jbuilder  show.json.jbuilder
app/views/sessions/: create.json.jbuilder  show.json.jbuilder
config/: application.rb  cable.yml  credentials.yml.enc  puma.rb  routes.rb
config/environments/: development.rb  production.rb
config/initializers/: cors.rb  devise.rb
config/locales/: devise.en.yml
db/: schema.rb
db/migrate/: 20190311181438_devise_create_users.rb  20190311181912_create_jwt.rb  20190407153347_create_orders.rb  20190519115242_create_passengers.rb  20190519155616_add.rb  20190519160842_rename_type.rb  20190519203628_add_cols.rb
