config_setting (
    name = "osx",
    constraint_values = [ "@bazel_tools//platforms:osx" ],
)
config_setting (
    name = "linux",
    constraint_values = [ "@bazel_tools//platforms:linux" ],
)
config_setting (
    name = "windows",
    constraint_values = [ "@bazel_tools//platforms:windows" ],
)
py_runtime(
    name = 'python3',
    files = [],
    interpreter_path = select({
        ":osx": "/usr/local/bin/python3.7",
        ":linux": "/usr/bin/python3.7",
    }),
    visibility = ['//visibility:public']
)
exports_files(["requirements.txt", "package.json", "package-lock.json", "Gemfile"])
